--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "moment": "^2.29.1",
     "mongoose": "^5.13.9",
     "morgan": "^1.10.0",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "stripe": "^8.177.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
